# llamaindex-sql-agents

./: .gitignore  README.md  pyproject.toml  qp-text-to-sql.ipynb
experiments/: pyproject.toml  qp-text-to-sql.ipynb  qpats.ipynb
ollama/: pyproject.toml
src/: app.py  components.py  conversation.py  frontend.py  init_data.py  observability.py  query_pipeline.py
src/utils/: models.py
