[tool.poetry]
name = "llamaindex-sql-agents"
version = "0.1.0"
description = ""
authors = ["Sérgio P. da Silva <sergio.pds@outlook.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
ipykernel = "^6.29.4"
llama-index-callbacks-arize-phoenix = "^0.1.5"
llama-index-llms-openai = "^0.1.22"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
arize-phoenix = {version = "^4.4.2", extras = ["evals"]}
numpy = ">= 1.23, < 2.0"
llama-index-embeddings-openai = "^0.1.10"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
